# gds-rps-pursuit

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: deploy.yml
pipeline/: dynamics.py  engagement.py  gen_formal.py  gen_sim.py  gen_stats.py  gen_viz.py  generate.py  leaders.py  match.py  ontology.py  pyproject.toml
pipeline/instances/: skirmish_3v3.json
pipeline/tests/: test_dynamics.py  test_engagement.py  test_match.py
site/: formal.html  index.html  package-lock.json  package.json  stats.html  vite.config.js
site/public/data/: formal.json  match.json  stats.json  viz_diagrams.json
site/src/: formal-page.js  main.js  stats-page.js  style.css
site/src/arena/: arena.js  playback.js
site/src/data/: loader.js
